Adding regular endpoint for ordo
